# libbpf-bootstrap

./: .clang-format  .gitignore
containerlab-env/: .gitignore  switch.clab.yml
containerlab-env/ubuntu-image/: Dockerfile  docker-compose.yml
example-test-environment/compose/: Dockerfile  docker-compose.yml
example-test-environment/containerlab/: .gitignore  .switch.clab.yml.bak  switch.clab.yml
example-test-environment/switch/: Vagrantfile
example-test-environment/switch-docker/: Vagrantfile
example-test-environment/switch-parallels/: .gitignore  Vagrantfile
examples/c/: .gitignore  CMakeLists.txt  minimal.bpf.c  minimal.c  router.bpf.c  router.c  router.h
examples/rust/: .gitignore  Cargo.toml
examples/rust/minimal_ns/: build.rs
examples/rust/minimal_ns/src/: main.rs
examples/rust/profile/: Cargo.toml
examples/rust/xdp_switch/: Cargo.toml  Dockerfile  README.md  build.rs
examples/rust/xdp_switch/src/: main.rs  memory_limit.rs
examples/rust/xdp_switch/src/bpf/: unknown_unicast_flooding.bpf.c  xdp_switch.bpf.c  xdp_switch.h
examples/rust/xdp_switch/src/bpf/.output/: xdp_switch.skel.rs
